# VotingApp

./: .env.example  .gitignore  LICENSE  README.md  build.sh  init_db.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0002_alter_userprofile_profile_name.py  0003_rename_profile_name_userprofile_name.py
apps/accounts/models/: user_profile_model.py
apps/accounts/repositories/: user_list_repository.py  user_profile_repository.py  user_repository.py
apps/accounts/serializers/: user_profile_serializers.py  user_serialziers.py
apps/accounts/services/: auth_service.py  user_list_service.py  user_profile_service.py  user_service.py
apps/accounts/views/: account.py  auth_views.py  countries_view.py  explore_users_view.py  search_users_view.py  session.py  user_list_all_view.py  user_list_by_keyword_view.py  (+5 more)
apps/accountsAPI/: admin.py  apps.py  urls.py
apps/polls/: serializers.py  serializerss.py  urls.py  views.py
apps/pollsAPI/: apps.py
apps/profiles/: models.py  serializers.py  urls.py  views.py
apps/serverAPI/: apps.py  urls.py  views.py
authentication/: serializers.py  urls.py  views.py
client/: .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
config/: settings.py  urls.py
config/db_routers/: accounts_router.py  auth_router.py
config/middleware/: mongo_middleware.py
polls/: serializers.py  urls.py  views.py
profiles/: admin.py  models.py  serializers.py
utils/: mongo_connection.py  pagination.py
(+365 files in other folders)
