[tool.poetry]
name = "votingapp"
version = "0.1.0"
description = ""
authors = ["nivwer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adrf = "0.1.2"
dj-database-url = "2.1.0"
Django = "4.2.4"
django-cors-headers = "4.2.0"
djangorestframework = "3.14.0"
motor = "^3.3.2"
psycopg2-binary = "2.9.9"
pymongo = "^4.5"
python-dotenv = "^1.0.1"
uvicorn = "0.23.2"
whitenoise = "6.6.0"
# asyncio==3.4.3
# gunicorn==21.2.0
# packaging==23.2
# Pillow==10.0.0
# python-dateutil==2.8.2
# six==1.16.0
mdb-singleton = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
